fixed put error
